# PractiseProject

./: .gitignore  CMakeLists.txt  action digram.puml  class diagram.puml  dhd  main.cpp
Boost_test/: CMakeLists.txt  Deposits_test.cpp
Data/: MenuItem.cpp  MenuItem.h
Qt_test/: tests.cpp  tests.h
Ui/: Вкладка отчета.ui  Выбор поиска.ui  Выбор сортировки.ui  Главное окно.ui  Диаграмма.ui  Добавление вклада.ui  Отчет.ui  Поиск процент.ui  Поиск срок.ui  Поиск тип.ui  Потверждение удаления.ui  Редактирование ввод.ui  Редактирование выбор.ui  Редактирование поиск.ui  Таблица.ui
src/: Deposit.cpp  Deposit.h  Functions.cpp  Functions.h  MenuItem.cpp  MenuItem.h  SetupUi.cpp  SetupUi.h
